2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated feature list/todo list.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: made it possible to switch objects between
	static/dynamic state on the fly.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: create mapping structure upon actor-added and
	actor-removed signals on ClutterBox2d container instead of on demand.
	This improves sanity of resource management.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* README: removed bits about downloading box2d trunk and patching it.
	* box2d-build-and-install-shared.patch: removed.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* configure.ac: replace hardcoded location of library with an in-place
	build.
	* Makefile.am: list all box2d cpp files as files that go into the
	clutter-box2d library.
	* box2d/: imported revision 140 from box2d svn directly into source
	tree.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.h:
	* clutter-box2d.cpp: added prototypes and stubs for methods on
	clutter_box2d_actor: _set_linear_velocity, _get_linear_velocity
	_set_angular_velocity _get_angular_velocity _apply_force _apply_impulse
	_apply_torque _set_bullet _is_bullet.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	Improved cleanup when actors are unreferenced, bodies are now
	destroyed upon actor destruction.

	* clutter-box2d.cpp:
	* clutter-box2d.h:

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp:
	* clutter-box2d.h: wrap b2MouseJoint functionality, allow changing
	the gravity of the simulation.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated feature list/todo list.

2008-04-08  Øyvind Kolås  <pippin@o-hand.com>

	* README: augmented TODO list.
	* configure.ac: added AC_PROG_CXX

2008-04-08  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.h: sketched out API for adding prismatic, distance,
	revolute and mouse joints.