@@ -30,12 +30,10 @@ Limitations:
  - Anchor points different from 0,0 probably does not work correctly.
 
 TODO:
+  - add a scale factor between clutter units and box2d units since now 1px = 1m
   - debug drawing of
       - joints
       - shapes
-  - joints 
-       - access to motor functionality of prismatic and revolute joints.
-  - other shapes than clutter synced boxes.
-  - add a scale factor between clutter units and box2d units since now 1px = 1m
-  - memory/lifetime handling for joint proxy objects
-  - full introspective capabilities
+  - access to motor functionality of prismatic and revolute joints.
+  - add gear joint
+  - sync the shape (recreate?) when size of actor changes.
